apps/wordpress/overlays/client-b/deploy.env.patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  template:
    spec:
      containers:
        - name: wordpress
